Gelato 1.0.0, 2013-02-26
------------------------
- Initial release