@@ -18,7 +18,14 @@
 /**
  * The version of Gelato
  */
-define('GELATO_VERSION', '1.0.0');
+define('GELATO_VERSION', '1.0.1');
+
+/** 
+ * Define __DIR__ constant for PHP 5.2.x
+ */
+if ( ! defined('__DIR__')) {
+    define('__DIR__', dirname(__FILE__));
+}
 
 /**
  * Display Gelato Errors or not ?
@@ -28,10 +35,10 @@ if ( ! defined('GELATO_DEVELOPMENT')) {
 }
 
 /**
- * Use Gelato Autoloader or not ?
+ * Use Gelato Class Loader or not ?
  */
-if ( ! defined('GELATO_AUTOLOADER')) {
-    define('GELATO_AUTOLOADER', true);
+if ( ! defined('GELATO_CLASS_LOADER')) {
+    define('GELATO_CLASS_LOADER', true);
 }
 
 /**
@@ -110,8 +117,8 @@ ClassLoader::mapClasses(array(
 ));
 
 /**
- * Register Gelato Autoloader
+ * Register Gelato Class Loader
  */
-if (GELATO_AUTOLOADER) {
-    spl_autoload_register('ClassLoader::load');
+if (GELATO_CLASS_LOADER) {
+    ClassLoader::register();
 }
